Make city a dictionary

--- a/notebooks/EZ-15-11-2022-imensa_data_collection.ipynb
+++ b/notebooks/EZ-15-11-2022-imensa_data_collection.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "from bs4 import BeautifulSoup\n",
@@ -32,15 +32,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "outputs": [],
    "source": [
-    "city = [\"muenster\"]\n",
-    "mensa = [\n",
-    "    \"mensa-da-vinci\", \"bistro-denkpause\", \"bistro-friesenring\",\n",
-    "    \"bistro-katholische-hochschule\",\n",
-    "    \"bistro-durchblick\", \"bistro-frieden\", \"bistro-kabu\", \"bistro-oeconomicum\", \"hier-und-jetzt\", \"mensa-am-aasee\", \"mensa-am-ring\", \"mensa-bispinghof\"\n",
-    "]\n",
+    "cities = {\n",
+    "    \"muenster\": [\n",
+    "        \"mensa-da-vinci\", \"bistro-denkpause\", \"bistro-friesenring\",\n",
+    "        \"bistro-katholische-hochschule\",\n",
+    "        \"bistro-durchblick\", \"bistro-frieden\", \"bistro-kabu\", \"bistro-oeconomicum\", \"hier-und-jetzt\", \"mensa-am-aasee\",\n",
+    "        \"mensa-am-ring\", \"mensa-bispinghof\"\n",
+    "    ]\n",
+    "}\n",
     "days = [\"montag\", \"dienstag\", \"mittwoch\", \"donnerstag\", \"freitag\"]"
    ],
    "metadata": {
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "attribute_replacement = {\n",
@@ -109,10 +111,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "outputs": [],
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "muenster mensa-da-vinci montag\n"
+     ]
+    }
+   ],
    "source": [
-    "f = requests.get(url)\n",
+    "c = list(cities.keys())[0]\n",
+    "print(c, cities[c][0], days[0])\n",
+    "f = requests.get(url.format(city=c, mensa=cities[c][0], day=days[0]))\n",
     "document = f.text"
    ],
    "metadata": {
@@ -121,20 +133,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "bs4.BeautifulSoup"
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 10,
+   "outputs": [],
    "source": [
-    "soup = BeautifulSoup(document, \"lxml\")\n",
-    "type(soup)"
+    "soup = BeautifulSoup(document, \"lxml\")"
    ],
    "metadata": {
     "collapsed": false
@@ -142,21 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "print(soup.prettify())"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "is_executing": true
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
@@ -178,19 +166,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Penne mit Gemüsesugo 1.80 True Vegan [] ['Gluten', 'Wheat'] 06.09.2022 2 4.0\n",
-      "Gefüllte Wirsingroulade mit Mett mit Jus vom Schwein 2.30 True Pork [] ['Gluten', 'Celery', 'Wheat'] None 0 0\n",
-      "Spinatknödel mit Gorgonzolasauce 2.05 True Vegetarian [] ['Egg', 'Gluten', 'Milk', 'Wheat'] 11.10.2022 2 4.0\n",
-      "Erbsen und Möhren 0.30 False Vegan [] [] 10.11.2022 6 4.8\n",
-      "Rahmkohlrabi 0.50 False Vegan ['Dyed'] ['Soy'] 03.11.2022 2 4.0\n",
-      "Salzkartoffeln 0.70 False Vegan ['Dyed'] [] 04.11.2022 15 4.5\n",
-      "Beilagensalat mit Essig-Öl-Dressing 0.90 False Vegan ['Antioxidants'] ['Mustard'] gestern 9 3.2\n"
+      "Backkartoffel mit Zaziki 1.65 True Vegan [] ['Mustard', 'Soy'] None 0 0\n",
+      "Hähnchen Piccata mit Tomatensauce 3.10 True Poultry [] ['Gluten', 'Milk', 'Wheat'] 05.09.2022 4 4.3\n",
+      "Ravioli mit Ricotta-Spinatfüllung mit Kräutersauce 1.40 True Vegetarian [] ['Gluten', 'Milk', 'Wheat'] None 1 5.0\n",
+      "Prinzessbohnen 0.30 False Vegan ['Dyed'] [] 07.11.2022 14 4.4\n",
+      "Reis 0.30 False Vegan ['Dyed'] [] 09.11.2022 29 3.2\n",
+      "Kohlrabi 0.30 False Vegan ['Dyed'] [] 11.11.2022 5 4.6\n",
+      "Kaisergemüse 0.50 False Vegan ['Dyed'] [] 07.11.2022 9 4.2\n",
+      "Pommes Frites klein 0.70 False Vegan [] [] 07.11.2022 5 4.4\n",
+      "Beilagensalat mit Essig-Öl-Dressing 0.90 False Vegan [] ['Mustard'] 11.11.2022 9 3.2\n",
+      "Himbeerquark 0.70 False Vegetarian [] ['Milk'] 04.11.2022 2 1.0\n",
+      "Quark mit Blaubeeren 0.70 False Vegetarian [] ['Milk'] 10.11.2022 0 0\n"
      ]
     }
    ],
