Make utils file and data collectors more abstract - Add translate.json - Add a README.md for data collections - Add a main handler for invoking data collectors

--- a/notebooks/EZ-15-11-2022-imensa_data_collection.ipynb
+++ b/notebooks/EZ-15-11-2022-imensa_data_collection.ipynb
@@ -192,6 +192,7 @@
     "    for meal in div.find_all(class_=\"aw-meal row no-margin-xs\"):\n",
     "        name = meal.find(class_=\"aw-meal-description\").text\n",
     "        price_for_students = meal.find(title=\"Preis für Studierende\").text[:-2].replace(\",\", \".\")\n",
+    "        price_for_non_students = price_for_students * 1.5\n",
     "\n",
     "        attributes = meal.find(class_=\"small aw-meal-attributes\").span.text.replace(\"\\xa0\", \"\").split(\" \")\n",
     "        category = attribute_replacement[attributes[0].lower()]\n",
@@ -229,8 +230,8 @@
     "        if ratings_avg_tag:\n",
     "            ratings_avg = float(non_digit.sub(\"\", ratings_avg_tag.text.replace(\",\", \".\")))\n",
     "\n",
-    "        print(name, price_for_students, main_meal, category, additives, allergies, last_occurrence, ratings_count,\n",
-    "              ratings_avg)\n",
+    "        print(name, (price_for_students, price_for_non_students), main_meal, category, additives, allergies,\n",
+    "              last_occurrence, ratings_count, ratings_avg)\n",
     "    main_meal = False"
    ],
    "metadata": {
