#20 save the lon and lat of the room address

--- a/notebooks/MJ-14-11-2022-learnweb_login.ipynb
+++ b/notebooks/MJ-14-11-2022-learnweb_login.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,6 +382,79 @@
     "                room_seats = int(re.findall(r'(?<=Plätze:)(.\\s*[0-9]*)(?=[a-zA-Z]*)', row.text)[0])\n",
     "                \n",
     "        print(room_id, room_name, room_address, room_seats)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Get long and lat of room"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_street_map_url = 'https://nominatim.openstreetmap.org/search?q={query}&format=json&polygon=1&addressdetails=1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "open_street_map_url_formatted = open_street_map_url.format(query='Leonardo-Campus 18')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "location_data = requests.get(open_street_map_url_formatted).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'city1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [13], line 11\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mcity\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m address:\n\u001b[0;32m      9\u001b[0m         city \u001b[39m=\u001b[39m address[\u001b[39m'\u001b[39m\u001b[39mcity\u001b[39m\u001b[39m'\u001b[39m]\n\u001b[1;32m---> 11\u001b[0m \u001b[39mif\u001b[39;00m city1\u001b[39m.\u001b[39mcasefold() \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mmünster\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[0;32m     13\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39m'\u001b[39m\u001b[39mlat\u001b[39m\u001b[39m'\u001b[39m \u001b[39min\u001b[39;00m data:\n\u001b[0;32m     14\u001b[0m         lat \u001b[39m=\u001b[39m data[\u001b[39m'\u001b[39m\u001b[39mlat\u001b[39m\u001b[39m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'city1' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "lon: str = None\n",
+    "lat: str = None\n",
+    "for data in location_data:\n",
+    "    \n",
+    "    if 'address' in data:\n",
+    "        address = data['address']\n",
+    "        \n",
+    "        if 'city' in address:\n",
+    "            city = address['city']\n",
+    "            \n",
+    "            if city.casefold() == 'münster':\n",
+    "                \n",
+    "                if 'lat' in data:\n",
+    "                    lat = data['lat']\n",
+    "                if 'lon' in data:\n",
+    "                    lon = data['lon']\n",
+    "                    \n",
+    "                break\n",
+    "            "
    ]
   }
  ],
