Testing dimension reduction

--- a/mensa_recommend/notebooks/EZ-09-12-2022-recommender_evaluation.ipynb
+++ b/mensa_recommend/notebooks/EZ-09-12-2022-recommender_evaluation.ipynb
@@ -143,11 +143,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 109,
    "outputs": [],
    "source": [
-    "from random import shuffle\n",
-    "\n",
     "def start_rating(iterations: int = 50):\n",
     "    user_name = input(\"What's your name?\")\n",
     "    if len(user_name) == 0:\n",
@@ -165,8 +163,8 @@
     "        idx = indices.pop(0)\n",
     "\n",
     "        def take_rating(info_text: str = \"Available options: 1..5, ?\"):\n",
-    "            rating = input(f\"What do you think about:      {j + 1}/{iterations}\\n{names[idx]}\\n\\n{info_text}\")\n",
-    "            if rating.isnumeric() and int(rating) == float(rating):\n",
+    "            rating = input(f\"What do you think about:      {j + 1}/{min(iterations, len(names))}\\n{names[idx]}\\n\\n{info_text}\")\n",
+    "            if rating.isnumeric() and int(rating) == float(rating) and 0 < int(rating) <= 5:\n",
     "                resulting_ratings[ids[idx]] = float(rating) / 5.0\n",
     "                return False\n",
     "            elif len(rating) == 0:\n",
@@ -188,19 +186,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 110,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Erik, here are your ratings:\n",
-      " {113: 0.6, 17: 0.8, 18: 1.0, 51: 1.0, 110: 0.4, 21: 1.0, 84: 0.8, 87: 0.8, 97: 0.6, 44: 0.4, 96: 0.4, 1: 0.6, 76: 0.8, 204: 0.6, 103: 0.6, 32: 0.2, 142: 0.8, 24: 0.6, 67: 0.6, 157: 0.8, 129: 0.8, 20: 0.6, 108: 0.2, 75: 0.2, 19: 0.8, 102: 0.6, 10: 0.6, 111: 0.4, 133: 0.6, 2: 0.8, 118: 0.4, 6: 0.2, 42: 0.4, 146: 0.4, 68: 0.8, 65: 0.8, 14: 0.6, 8: 0.8, 60: 0.4, 15: 0.4, 94: 1.0, 127: 0.6, 114: 0.6, 31: 0.8, 45: 0.6, 78: 0.2, 209: 0.6, 168: 0.6, 137: 0.2, 172: 0.4}\n"
+      " {93: 0.8, 177: 0.6, 8: 0.8, 57: 0.6, 108: 0.6, 23: 0.8, 5: 0.6, 113: 0.8, 206: 0.8, 163: 0.6, 19: 1.0, 89: 0.6, 68: 0.8, 136: 1.0, 195: 0.8, 142: 0.8, 97: 0.6, 92: 0.4, 15: 1.0, 196: 0.8, 25: 0.2, 205: 1.0, 27: 1.0, 126: 0.6, 110: 0.2, 90: 0.6, 10: 0.8, 60: 0.6, 157: 0.8, 41: 0.8, 9: 0.8, 172: 0.8, 146: 0.6, 91: 0.8, 131: 0.8, 76: 1.0, 114: 0.8, 209: 0.6, 81: 0.4, 38: 1.0, 45: 0.6, 3: 0.6, 154: 0.8, 152: 0.2, 98: 0.6, 188: 0.6, 31: 0.6, 85: 0.2, 86: 0.4, 103: 0.8, 32: 0.8, 6: 0.4, 95: 0.8, 17: 0.8, 16: 0.8, 70: 0.4, 122: 0.6, 174: 0.6, 123: 0.6, 168: 0.8, 132: 1.0, 78: 0.2, 21: 1.0, 128: 0.2, 11: 1.0, 109: 0.2, 138: 0.4, 77: 0.2, 204: 0.6, 18: 0.8, 44: 0.6, 118: 0.4, 149: 0.6, 29: 0.6, 87: 0.8, 43: 1.0, 4: 0.4, 66: 0.8, 51: 0.8, 94: 0.8, 52: 0.6, 133: 0.2, 137: 0.6, 111: 0.6, 102: 0.8, 65: 0.8, 129: 0.6, 100: 0.8, 20: 0.2, 61: 0.4, 145: 0.8, 200: 0.8, 166: 0.8, 42: 0.8, 151: 0.6, 127: 0.8, 96: 0.6, 2: 0.6, 75: 0.2, 67: 0.6, 84: 0.4, 160: 0.2, 13: 0.6, 14: 0.4, 1: 0.4, 125: 0.6, 140: 0.8, 24: 0.6}\n"
      ]
     }
    ],
    "source": [
-    "name, ratings = start_rating()\n",
+    "name, ratings = start_rating(iterations=9999)\n",
     "\n",
     "print(f\"{name}, here are your ratings:\\n\", ratings)"
    ],
@@ -210,10 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 111,
    "outputs": [],
    "source": [
-    "own_ratings = {113: 0.6, 17: 0.8, 18: 1.0, 51: 1.0, 110: 0.4, 21: 1.0, 84: 0.8, 87: 0.8, 97: 0.6, 44: 0.4, 96: 0.4, 1: 0.6, 76: 0.8, 204: 0.6, 103: 0.6, 32: 0.6, 142: 0.8, 24: 0.6, 67: 0.6, 157: 0.8, 129: 0.8, 20: 0.6, 108: 0.2, 75: 0.2, 19: 0.8, 102: 0.6, 10: 0.6, 111: 0.4, 133: 0.6, 2: 0.8, 118: 0.4, 6: 0.2, 42: 0.4, 146: 0.4, 68: 0.8, 65: 0.8, 14: 0.6, 8: 0.8, 60: 0.4, 15: 0.4, 94: 1.0, 127: 0.6, 114: 0.6, 31: 0.8, 45: 0.6, 78: 0.2, 209: 0.6, 168: 0.6, 137: 0.2, 172: 0.4}"
+    "own_ratings = {93: 0.8, 177: 0.6, 8: 0.8, 57: 0.6, 108: 0.6, 23: 0.8, 5: 0.6, 113: 0.8, 206: 0.8, 163: 0.6, 19: 1.0, 89: 0.6, 68: 0.8, 136: 1.0, 195: 0.8, 142: 0.8, 97: 0.6, 92: 0.4, 15: 1.0, 196: 0.8, 25: 0.2, 205: 1.0, 27: 1.0, 126: 0.6, 110: 0.2, 90: 0.6, 10: 0.8, 60: 0.6, 157: 0.8, 41: 0.8, 9: 0.8, 172: 0.8, 146: 0.6, 91: 0.8, 131: 0.8, 76: 1.0, 114: 0.8, 209: 0.6, 81: 0.4, 38: 1.0, 45: 0.6, 3: 0.6, 154: 0.8, 152: 0.2, 98: 0.6, 188: 0.6, 31: 0.6, 85: 0.2, 86: 0.4, 103: 0.8, 32: 0.8, 6: 0.4, 95: 0.8, 17: 0.8, 16: 0.8, 70: 0.4, 122: 0.6, 174: 0.6, 123: 0.6, 168: 0.8, 132: 1.0, 78: 0.2, 21: 1.0, 128: 0.2, 11: 1.0, 109: 0.2, 138: 0.4, 77: 0.2, 204: 0.6, 18: 0.8, 44: 0.6, 118: 0.4, 149: 0.6, 29: 0.6, 87: 0.8, 43: 1.0, 4: 0.4, 66: 0.8, 51: 0.8, 94: 0.8, 52: 0.6, 133: 0.2, 137: 0.6, 111: 0.6, 102: 0.8, 65: 0.8, 129: 0.6, 100: 0.8, 20: 0.2, 61: 0.4, 145: 0.8, 200: 0.8, 166: 0.8, 42: 0.8, 151: 0.6, 127: 0.8, 96: 0.6, 2: 0.6, 75: 0.2, 67: 0.6, 84: 0.4, 160: 0.2, 13: 0.6, 14: 0.4, 1: 0.4, 125: 0.6, 140: 0.8, 24: 0.6}"
    ],
    "metadata": {
     "collapsed": false
@@ -231,9 +229,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 236,
    "outputs": [],
    "source": [
+    "from math import pow\n",
+    "from random import shuffle\n",
+    "\n",
     "def get_profile(user_ratings, encodings):\n",
     "    x = [0] * len(encodings[0])\n",
     "    for item_id in user_ratings:\n",
@@ -246,16 +247,38 @@
     "        sim.append(cosine_similarity(profile, encodings[j]))\n",
     "    return sim\n",
     "\n",
-    "def distance(user_ratings, encodings):\n",
+    "def distance(user_ratings, encodings, split: float = 0.6):\n",
+    "    user_ratings = user_ratings.copy()\n",
+    "    test_set = {}\n",
+    "    keys = list(user_ratings.keys())\n",
+    "    shuffle(keys)\n",
+    "\n",
+    "    for j in range(int(len(user_ratings) * split)):\n",
+    "        key = keys.pop()\n",
+    "        test_set[key] = user_ratings.pop(key)\n",
+    "\n",
+    "\n",
     "    X = get_profile(user_ratings, encodings)\n",
     "    sim = compute_similarities(X, encodings)\n",
     "\n",
-    "    dist = 0\n",
+    "    dist_train = 0\n",
+    "    dist_test = 0\n",
     "    for j in range(len(sim)):\n",
     "        item_id = ids[j]\n",
     "        if item_id in user_ratings:\n",
-    "            dist += abs(user_ratings[item_id] - sim[j])\n",
-    "    return round(dist, 5), round(dist / len(user_ratings), 5), len(X)"
+    "            dist_train += pow(user_ratings[item_id] - sim[j], 2)\n",
+    "        if item_id in test_set:\n",
+    "            dist_test += pow(test_set[item_id] - sim[j], 2)\n",
+    "    return round(dist_train, 6), round(dist_train / len(user_ratings), 6), round(dist_test, 6), round(dist_test / len(test_set), 6), len(X)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Dimension Reduction"
    ],
    "metadata": {
     "collapsed": false
@@ -263,27 +286,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 224,
+   "outputs": [],
+   "source": [
+    "from typing import Tuple\n",
+    "from tqdm import tqdm\n",
+    "\n",
+    "\n",
+    "def distance_with_dim_sel(user_ratings, encodings, dims, split: float = 0) -> Tuple[float, float]:\n",
+    "    selected = []\n",
+    "    for value in encodings:\n",
+    "        item = []\n",
+    "        for dim in dims:\n",
+    "            item.append(value[dim])\n",
+    "        selected.append(item)\n",
+    "\n",
+    "    _, mse, _, mse_test, _ = distance(user_ratings, selected, split=split)\n",
+    "    return mse, mse_test\n",
+    "\n",
+    "def dimension_reduction(user_ratings, encodings, max_dims: int = 50, early_stop: bool = True) -> [int]:\n",
+    "    fixed = []\n",
+    "    last_mse = -1\n",
+    "    dimensions = list(range(len(encodings[0])))\n",
+    "    best_mse_ever = 9999999999\n",
+    "\n",
+    "    for _ in tqdm(range(min(max_dims, len(encodings[0])))):\n",
+    "        best_dim: int = -1\n",
+    "        best_dim_mse: float = 0\n",
+    "\n",
+    "        for j in dimensions:\n",
+    "            fixed_copy = fixed.copy()\n",
+    "            fixed_copy.append(j)\n",
+    "            mse = distance_with_dim_sel(user_ratings, encodings, fixed_copy)[0]\n",
+    "\n",
+    "            if best_dim == -1 or mse < best_dim_mse:\n",
+    "                best_dim = j\n",
+    "                best_dim_mse = mse\n",
+    "\n",
+    "        if early_stop and 0 < last_mse < best_dim_mse:\n",
+    "            print(\"early stopped\")\n",
+    "            break\n",
+    "\n",
+    "        best_mse_ever = min(best_mse_ever, best_dim_mse)\n",
+    "        last_mse = best_dim_mse\n",
+    "        fixed.append(best_dim)\n",
+    "        dimensions.remove(best_dim)\n",
+    "    return fixed, distance_with_dim_sel(user_ratings, encodings, fixed), best_mse_ever"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 55/55 [01:01<00:00,  1.13s/it]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55 0.0349 0.0348\n",
+      "Done in 61.97973871231079s\n",
+      "13 42\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from time import time\n",
+    "\n",
+    "t = time()\n",
+    "selected_dims, best_mse, best_mse_test, best_mse_es = dimension_reduction(own_ratings, enc_bert, max_dims=int(len(enc[0]) * 1.5), early_stop=False)\n",
+    "print(len(selected_dims), best_mse, best_mse_es)\n",
+    "print(f\"Done in {time() - t}s\")\n",
+    "\n",
+    "input_split = len(enc[0])\n",
+    "s0 = 0\n",
+    "s1 = 0\n",
+    "\n",
+    "for dim in selected_dims:\n",
+    "    if dim < input_split:\n",
+    "        s0 += 1\n",
+    "    else:\n",
+    "        s1 += 1\n",
+    "print(s0, s1)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Recommendations based on 50 ratings.\n",
-      "0.20863 : Only dish categories, additives, allergies : 37\n",
-      "0.19435 : categories, additives, allergies + BERT embeds : 421\n",
-      "0.17663 : BERT embeds : 384\n"
+      "With split: (0.035438, 0.033117)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"With split:\", distance_with_dim_sel(own_ratings, enc_bert, selected_dims, split=0.3))"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendations based on 108 ratings.\n",
+      "0.085309 0.088032 : Only dish categories, additives, allergies : 37\n",
+      "0.091767 0.071042 : categories, additives, allergies + BERT embeds : 421\n",
+      "0.074563 0.072358 : BERT embeds : 384\n"
      ]
     }
    ],
    "source": [
     "print(f\"Recommendations based on {len(ratings)} ratings.\")\n",
     "res_dish_info = distance(own_ratings, enc)\n",
-    "print(res_dish_info[1], \": Only dish categories, additives, allergies\", \":\", res_dish_info[2])\n",
+    "print(res_dish_info[1], res_dish_info[3], \": Only dish categories, additives, allergies\", \":\", res_dish_info[4])\n",
     "res_dish_info_bert = distance(own_ratings, enc_bert)\n",
-    "print(res_dish_info_bert[1], \": categories, additives, allergies + BERT embeds\", \":\", res_dish_info_bert[2])\n",
+    "print(res_dish_info_bert[1], res_dish_info_bert[3], \": categories, additives, allergies + BERT embeds\", \":\", res_dish_info_bert[4])\n",
     "res_bert = distance(own_ratings, embeds)\n",
-    "print(res_bert[1], \": BERT embeds\", \":\", res_bert[2])"
+    "print(res_bert[1], res_bert[3], \": BERT embeds\", \":\", res_bert[4])"
    ],
    "metadata": {
     "collapsed": false
@@ -293,6 +439,19 @@
    "cell_type": "markdown",
    "source": [
     "# Results\n",
+    "\n",
+    "mean squared error\n",
+    "\n",
+    "bert model: all-MiniLM-L6-v2 (smaller)\n",
+    "\n",
+    "Recommendations based on 108 ratings.\n",
+    "0.09932 : Only dish categories, additives, allergies : 37\n",
+    "0.08285 : categories, additives, allergies + BERT embeds : 421\n",
+    "0.07201 : BERT embeds : 384\n",
+    "\n",
+    "--------\n",
+    "\n",
+    "mean absolute error\n",
     "\n",
     "bert model: all-MiniLM-L6-v2 (smaller)\n",
     "\n",
